@@ -136,6 +136,9 @@ Changed in ATK 6.2
 + Added support for dynamically loading stylesheets (for Ajax requests). [Peter]
 + Added $config_application_dir which can be used to separate ATK from your
   application code. [Boy]
++ Added atkManyToManySelectRelation, a new variant of the many to many relation
+  which allows you to add items to the relation using auto-completion. Useful 
+  for many-to-many relations which have many selectable options. [Peter]
 * Refactored and fixed searching in attributes and relations. Custom attributes/
   relations which override the search method and take prefixes into account
   might break because the way the atkSearch(Mode) array is now handled.
